light_clone/tests/ui/enum_string_field.stderr
error[E0277]: the trait bound `String: LcClone` is not satisfied
 --> tests/ui/enum_string_field.rs:3:10
  |
3 | #[derive(LightClone)]
  |          ^^^^^^^^^^ the trait `LcClone` is not implemented for `String`
  |
  = help: the following other types implement trait `LcClone`:
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
  = note: this error originates in the derive macro `LightClone` (in Nightly builds, run with -Z macro-backtrace for more info)
