light_clone/tests/ui/enum_string_field.rs
use light_clone::LightClone;

#[derive(LightClone)]
enum BadEnum {
    Good(i32),
    Bad(String), // String does not implement LightClone
}

fn main() {}
